--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">TheMovieDb</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="connection_error">Information not available, please try again later</string>
+    <string name="wait_message">Wait a moment please... pixels are getting dressed!</string>
 </resources>
